--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "make-it-list",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "index.js",
   "type": "module",
   "repository": {
@@ -19,6 +19,6 @@
   },
   "dependencies": {
     "figlet": "^1.8.0",
-    "inquirer": "^12.4.2",
+    "inquirer": "^12.4.2"
   }
 }
